--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <body>
     <main id="card">
       <section>
-        <img src="./assets/images/foto.jpg" alt="Rodrigo Augusto Lima" />
+        <img src="./assets/images/Foto.jpg" alt="Rodrigo Augusto Lima" />
 
         <h1>Rodrigo Augusto Lima</h1>
         <h2>São José dos Campos - SP</h2>
